[package]
name = "flake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
bollard = "0.14.0"
tokio = { version = "1.28.2", features = ["macros"] }
termion = "2.0.1"
futures-util = "0.3.28"
# docker-compose-types = "0.5.1"
git2 = "0.17.2"
tokio-rayon = "2.1.0"
tokio-process-stream = "0.4.0"
# tfschema_bindgen = "0.1.5"
# https://crates.io/crates/futures-signals
